--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                                     <label for="">What are you interested in?</label>
                                     <select class="contact-form" name="" id="select-contact" >
                                         <option value="none" selected disabled hidden>Select Option</option>
-                                        <option value="A" name="interest" >A</option>
-                                        <option value="B" name="interest" >B</option>
-                                        <option value="C" name="interest" > C</option>
+                                        <option value="A" name="interest" >City Light</option>
+                                        <option value="B" name="interest" >Sunset</option>
+                                        <option value="C" name="interest" >Date</option>
                                     </select>
                                     <button type="submit" class="contact-btn">SEND</button>
                                 </div>
